--- a/homework.html
+++ b/homework.html
@@ -34,7 +34,7 @@
 		flex:none;width:280px;background-color:balck;margin:10px;
 	}
 	.pics{
-		width:280px;
+		width:280px;vertical-align:bottom;
 	}
 	.adj{
 		font-size:20px;text-align:center;background-color:white;width:280px;
